--- a/Dinamic V3/test-output/old/Default suite/classes.html
+++ b/Dinamic V3/test-output/old/Default suite/classes.html
@@ -4,6 +4,28 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.dinamic.v3.test.DeleteCategory</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deletingCategory</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.dinamic.v3.test.Registration</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -11,7 +33,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>categoryAdding</td>
+<td>registration</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
