--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dac5ef">  <td>22/12/02 12:17:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@17497425]">&gt;&gt;beforTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="f86c64">  <td>22/12/02 12:17:50</td>   <td>-4001</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@194bcebf]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="f86c64">  <td>22/12/02 12:17:54</td>   <td>107</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@194bcebf]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/02 12:17:54</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditingCompanyDetails.deletingCategory()[pri:0, instance:com.dinamic.v3.test.EditingCompanyDetails@1e04fa0a]">deletingCategory</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>22/12/02 12:17:54</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@17497425]">enableServiceCharge</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="f86c64">  <td>22/12/02 12:17:54</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@194bcebf]">log</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="f86c64">  <td>22/12/02 12:17:54</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.LoginTestCase@194bcebf]">ordersEntry</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/02 12:17:54</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.registration()[pri:0, instance:com.dinamic.v3.test.Registration@5562c41e]">registration</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>22/12/02 12:17:54</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@17497425]">seviceChargeAdd</td> 
-  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/02 16:25:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1436633036</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/02 16:26:13</td>   <td>19470</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1436633036</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/02 16:25:59</td>   <td>5044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">log</td> 
+  <td>main@1436633036</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/02 16:25:59</td>   <td>5338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">ordersEntry</td> 
+  <td>main@1436633036</td>   <td></td> </tr>
 </table>
