--- a/Dinamic V3/test-output/old/Default suite/methods.html
+++ b/Dinamic V3/test-output/old/Default suite/methods.html
@@ -1,12 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>22/12/03 15:58:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/03 15:59:25</td>   <td>29792</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/03 15:59:01</td>   <td>6102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">ordersEntry</td> 
-  <td>main@445918232</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/03 15:59:01</td>   <td>5767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.LoginTestCase@4f2b503c]">log</td> 
-  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>22/12/05 10:52:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditingCompanyDetails.deletingCategory()[pri:0, instance:com.dinamic.v3.test.EditingCompanyDetails@1af2d44a]">deletingCategory</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/12/05 10:53:40</td>   <td>47952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@f0da945]">seviceChargeAdd</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 10:52:26</td>   <td>-25980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.registration()[pri:0, instance:com.dinamic.v3.test.Registration@32ee6fee]">registration</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="f86c64">  <td>22/12/05 10:52:20</td>   <td>-31862</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@17497425]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/12/05 10:52:26</td>   <td>-26050</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@f0da945]">&gt;&gt;beforTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>22/12/05 10:53:30</td>   <td>37377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.ServiceCharge@f0da945]">enableServiceCharge</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="f86c64">  <td>22/12/05 10:53:03</td>   <td>11214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@17497425]">ordersEntry</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="f86c64">  <td>22/12/05 10:53:51</td>   <td>58678</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@17497425]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1682681674</td>   <td></td> </tr>
+<tr bgcolor="f86c64">  <td>22/12/05 10:53:03</td>   <td>10922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@17497425]">log</td> 
+  <td>main@1682681674</td>   <td></td> </tr>
 </table>
