OMS Calculation without any discounts

--- a/Dinamic V3/test-output/old/Default suite/methods.html
+++ b/Dinamic V3/test-output/old/Default suite/methods.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90e579">  <td>22/12/05 11:53:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@31fa1761]">log</td> 
-  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="90e579">  <td>22/12/05 11:53:05</td>   <td>278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@31fa1761]">ordersEntry</td> 
-  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>22/12/05 11:52:22</td>   <td>-42399</td> <td>&nbsp;</td><td title="&gt;&gt;ServiceCharge.beforTestMethod()[pri:0, instance:com.dinamic.v3.test.tescases.ServiceCharge@729d991e]">&gt;&gt;beforTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/05 11:52:22</td>   <td>-42339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditingCompanyDetails.deletingCategory()[pri:0, instance:com.dinamic.v3.test.tescases.EditingCompanyDetails@4229bb3f]">deletingCategory</td> 
-  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>22/12/05 11:52:30</td>   <td>-33827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.enableServiceCharge()[pri:0, instance:com.dinamic.v3.test.tescases.ServiceCharge@729d991e]">enableServiceCharge</td> 
-  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="90e579">  <td>22/12/05 11:52:17</td>   <td>-47464</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@31fa1761]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="90e579">  <td>22/12/05 11:53:31</td>   <td>27028</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@31fa1761]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="90e579">  <td>22/12/05 11:53:05</td>   <td>272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@31fa1761]">withoutItemDiscountPrice</td> 
-  <td>main@355518265</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>22/12/05 11:52:39</td>   <td>-25124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceCharge.seviceChargeAdd()[pri:0, instance:com.dinamic.v3.test.tescases.ServiceCharge@729d991e]">seviceChargeAdd</td> 
-  <td>main@355518265</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 16:23:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">ordersEntry</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 16:24:18</td>   <td>26838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">withoutItemDiscountPrice</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 16:23:46</td>   <td>-4923</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 16:24:18</td>   <td>26984</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/05 16:23:50</td>   <td>-546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@bae7dc0]">log</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
 </table>
