--- a/Dinamic V3/test-output/emailable-report.html
+++ b/Dinamic V3/test-output/emailable-report.html
@@ -9,15 +9,49 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76,942</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">32,342</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dinamic.v3.test.tescases.EditingCompanyDetails</td><td><a href="#m0">deletingCategory</a></td><td rowspan="1">1670221342414</td><td rowspan="1">8501</td></tr><tr class="passedodd"><td rowspan="3">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m1">log</a></td><td rowspan="1">1670221384753</td><td rowspan="1">269</td></tr><tr class="passedodd"><td><a href="#m2">ordersEntry</a></td><td rowspan="1">1670221385031</td><td rowspan="1">26748</td></tr><tr class="passedodd"><td><a href="#m3">withoutItemDiscountPrice</a></td><td rowspan="1">1670221385025</td><td rowspan="1">3</td></tr><tr class="passedeven"><td rowspan="2">com.dinamic.v3.test.tescases.ServiceCharge</td><td><a href="#m4">enableServiceCharge</a></td><td rowspan="1">1670221350926</td><td rowspan="1">8702</td></tr><tr class="passedeven"><td><a href="#m5">seviceChargeAdd</a></td><td rowspan="1">1670221359629</td><td rowspan="1">25122</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m0">withoutItemDiscountPrice</a></td><td rowspan="1">1670237658104</td><td rowspan="1">143</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m1">log</a></td><td rowspan="1">1670237630720</td><td rowspan="1">532</td></tr><tr class="passedeven"><td><a href="#m2">ordersEntry</a></td><td rowspan="1">1670237631266</td><td rowspan="1">26834</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.dinamic.v3.test.tescases.EditingCompanyDetails#deletingCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.dinamic.v3.test.tescases.OrdersTestCase#withoutItemDiscountPrice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [26191] but found [2619]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
+	at org.testng.Assert.assertEquals(Assert.java:122)
+	at org.testng.Assert.assertEquals(Assert.java:907)
+	at org.testng.Assert.assertEquals(Assert.java:917)
+	at com.dinamic.v3.test.pages.OMSPage.orderCalculation(OMSPage.java:212)
+	at com.dinamic.v3.test.tescases.OrdersTestCase.withoutItemDiscountPrice(OrdersTestCase.java:63)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.dinamic.v3.test.tescases.OrdersTestCase#log</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.dinamic.v3.test.tescases.OrdersTestCase#ordersEntry</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.dinamic.v3.test.tescases.OrdersTestCase#withoutItemDiscountPrice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.dinamic.v3.test.tescases.ServiceCharge#enableServiceCharge</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.dinamic.v3.test.tescases.ServiceCharge#seviceChargeAdd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
