--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-1000940817\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--827450395\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Default_suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withoutItemDiscountPrice">withoutItemDiscountPrice</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,32 +118,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.EditingCompanyDetails" class="method navigator-link" hash-for-method="deletingCategory">deletingCategory</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.ServiceCharge" class="method navigator-link" hash-for-method="enableServiceCharge">enableServiceCharge</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="log">log</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="ordersEntry">ordersEntry</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.ServiceCharge" class="method navigator-link" hash-for-method="seviceChargeAdd">seviceChargeAdd</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withoutItemDiscountPrice">withoutItemDiscountPrice</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -144,28 +138,60 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.tescases.ServiceCharge</span>
+              <img src="failed.png"/>
+              <span class="class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="enableServiceCharge">
-                  </a> <!-- enableServiceCharge -->
-                  <span class="method-name">enableServiceCharge</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="seviceChargeAdd">
-                  </a> <!-- seviceChargeAdd -->
-                  <span class="method-name">seviceChargeAdd</span>
+                  <a name="withoutItemDiscountPrice">
+                  </a> <!-- withoutItemDiscountPrice -->
+                  <span class="method-name">withoutItemDiscountPrice</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [26191] but found [2619]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
+	at org.testng.Assert.assertEquals(Assert.java:122)
+	at org.testng.Assert.assertEquals(Assert.java:907)
+	at org.testng.Assert.assertEquals(Assert.java:917)
+	at com.dinamic.v3.test.pages.OMSPage.orderCalculation(OMSPage.java:212)
+	at com.dinamic.v3.test.tescases.OrdersTestCase.withoutItemDiscountPrice(OrdersTestCase.java:63)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -186,34 +212,12 @@
                   <span class="method-name">ordersEntry</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withoutItemDiscountPrice">
-                  </a> <!-- withoutItemDiscountPrice -->
-                  <span class="method-name">withoutItemDiscountPrice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.tescases.EditingCompanyDetails</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="deletingCategory">
-                  </a> <!-- deletingCategory -->
-                  <span class="method-name">deletingCategory</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-1000940817\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--827450395\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -222,12 +226,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.EditingCompanyDetails&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.ServiceCharge&quot;/&gt;
       &lt;class name=&quot;com.dinamic.v3.test.tescases.OrdersTestCase&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.Registration&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.OMSPageOrderCalculation&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.pages.OMSPage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -241,7 +240,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (6 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -267,36 +266,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ordersEntry')
 data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 26748);
+data.setCell(0, 3, 26834);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'seviceChargeAdd')
-data.setCell(1, 2, 'com.dinamic.v3.test.tescases.ServiceCharge')
-data.setCell(1, 3, 25122);
+data.setCell(1, 1, 'log')
+data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
+data.setCell(1, 3, 532);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'enableServiceCharge')
-data.setCell(2, 2, 'com.dinamic.v3.test.tescases.ServiceCharge')
-data.setCell(2, 3, 8702);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'deletingCategory')
-data.setCell(3, 2, 'com.dinamic.v3.test.tescases.EditingCompanyDetails')
-data.setCell(3, 3, 8501);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'log')
-data.setCell(4, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(4, 3, 269);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'withoutItemDiscountPrice')
-data.setCell(5, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(5, 3, 3);
+data.setCell(2, 1, 'withoutItemDiscountPrice')
+data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
+data.setCell(2, 3, 143);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -311,16 +298,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dinamic.v3.test.tescases.Registration</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">registration</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
               <div class="ignored-methods-div">
@@ -341,49 +321,23 @@ return data;
                 <span class="method-name">browserConfiguration</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.ServiceCharge</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">beforTestMethod</span>
-                <span class="method-start">5069 ms</span>
-              </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.EditingCompanyDetails</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">deletingCategory</span>
-                <span class="method-start">5129 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.ServiceCharge</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">enableServiceCharge</span>
-                <span class="method-start">13641 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">seviceChargeAdd</span>
-                <span class="method-start">22344 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">log</span>
-                <span class="method-start">47468 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">47740 ms</span>
+                <span class="method-start">4381 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ordersEntry</span>
-                <span class="method-start">47746 ms</span>
+                <span class="method-start">4927 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">withoutItemDiscountPrice</span>
+                <span class="method-start">31765 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">74496 ms</span>
+                <span class="method-start">31911 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
